--- a/views/index.phtml
+++ b/views/index.phtml
@@ -11,4 +11,29 @@ $url = ('http://api.tvmaze.com/search/shows?q='.$urlVar);
 $json = file_get_contents($url);
 $retValue = json_decode($json, TRUE);
 
-var_dump($retValue);
+for ($x = 0; $x < count($retValue); $x++) {
+    $arrayName[$x] = $retValue[$x]['show']['name'];
+    $arrayScore[$x] = $retValue[$x]['score'];
+
+    $arrayTotal["name"] = $arrayName;
+    $arrayTotal["score"] = $arrayScore;
+}
+
+//Counter for score loop
+
+$counter = 0;
+
+//Array to filter non type get values
+
+foreach ($arrayTotal['name'] as $valueName) {
+    $valueBack = foundStringCaseInsensitive($valueName, $_GET['search']);
+    if ($valueBack != null) {
+        $finalArrayName[$valueName] = $valueBack;
+        $finalArrayScore[$valueName] = $arrayTotal['score'][$counter];
+        echo " Name: ".$finalArrayName[$valueName]." - Score: ".$finalArrayScore[$valueName];
+        echo "<br/>";
+    }
+    $counter++;
+}
+
+
